tests/NormalTests/paczka1/small_fuzzy/56214447.err
Error in line 4: cxiPpiYq A358 4,7
Error in line 8: A451 A451 -2,7
Error in line 5: cxiPpiYq A617 454,9
